<resources>
    <string name="app_name">TrackingApp</string>
    <string name="hello">Hello</string>
    <string name="goals">Goals</string>
    <string name="_00_0">$00.0</string>
    <string name="income">Income</string>
    <string name="home">Home</string>
    <string name="transactions">transactions</string>
    <string name="transaction_item">transaction</string>
    <string name="statistics">statistics</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="expense">Expense</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="_2022_8_30">2022-8-30</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="balance">Balance</string>
    <string name="edit">Edit</string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="income_lower_case">Income</string>
    <string name="expense_lower_case">Expense</string>
    <string name="reports">reports</string>
    <string name="settings">settings</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="nav_drawer_header">Track Your Expenses</string>
    <string name="spending_limit">Spending Limit</string>
    <string name="dark_theme">Dark Theme</string>


    <!--list of transacation categories-->
    <string name="bills">Bills</string>
    <string name="food">Food </string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="housing">Housing</string>
    <string name="health">Health</string>
    <string name="travel">Travel</string>
    <string name="transportation">Transportation</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="investments">Investments</string>

    <!--list of payment methods-->
    <string name="cash">Cash</string>
    <string name="online_banking">Online Banking</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restriction">restriction</string>
    <string name="delete_all_records">Delete All Records</string>
    <string name="this_will_clear_all_your_income_expense_entries">This will clear all your income expense entries</string>
    <string name="optional">Optional</string>


</resources>