<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/ll_input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvType"
            app:layout_constraintTop_toBottomOf="@+id/tvType"
            android:checkedButton="@id/radio_expense">

            <RadioButton
                android:id="@+id/radio_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/colorPrimary"
                android:text="@string/expense" />

            <RadioButton
                android:id="@+id/radio_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/colorPrimary"
                android:layout_marginStart="50dp"
                android:text="@string/income" />


        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/amount"
            app:prefixText="$"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/payment_method">

            <AutoCompleteTextView
                android:id="@+id/et_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_payment_method"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:id="@+id/et_transaction_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/date"
            android:clickable="true"
            android:focusable="true"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/note"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>