<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.ui.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIncome"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#109175"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <TextView
                    android:id="@+id/tvTitleIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:padding="2dp"
                    android:text="@string/income"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvAmountIncome"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAmountIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:text="@string/_00_0"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitleExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="16dp"
                    android:padding="2dp"
                    android:text="@string/expense"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleIncome"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleIncome" />

                <TextView
                    android:id="@+id/tvAmountExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="2dp"
                    android:text="@string/_00_0"
                    android:textSize="20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleExpense"
                    app:layout_constraintEnd_toEndOf="@+id/tvAmountIncome"
                    app:layout_constraintStart_toStartOf="@+id/tvAmountIncome" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>